# omniflow-automation

./: .env  .env.example  .gitignore  App.tsx  COMFYUI_SETUP.md  DEPLOYMENT_SUCCESS.md  Dockerfile.runner  ERROR_FIXES_DEPLOYMENT.md  FACTORY_STANDARD.md  FINAL_STATUS.txt  FIXES_API_ERRORS.md  GOOGLE_YANITLARI.txt  IMPLEMENTATION_SUMMARY.md  README.md  SETUP_HF_NATIVE.md  SYSTEM_STATUS_FINAL.md  TEST_REPORT_CRYPTO_ARBITRAGE.md  debug_log.txt  debug_output_2.txt  debug_output_3.txt  docker-compose.yml  google_oto_yorum_cevap_verme.py  icerik_fabrikasi_20251229_185457.json  index.css  index.html  kuafor_icerik_20251229_190343.json  metadata.json  netlify.toml  package-lock.json  package.json  railway.json  runner.py  supabase_schema.sql  test-templates.js  test_crypto_arbitrage.py  types.ts  vite.config.ts
automations/: icerik_fabrikasi.py  kuafor_icerik.py
automations/microtrend-bot/: .env  README.md  bot.py  netlify.toml  panel.html  pyproject.toml  requirements.txt  setup.html  workflow.yml
automations/microtrend-bot/netlify/functions/: api.js
components/: AgentMonitorDashboard.tsx  ApiConfigPanel.tsx  AutomationPackager.tsx  AutomationResults.tsx  AutomationRunnerModal.tsx  Button.tsx  CarouselGenerator.tsx  CloudSettings.tsx  CodeExportModal.tsx  ContentWizard.tsx  DeploymentPanel.tsx  ExecutionHistory.tsx  ImageGenerator.tsx  IntegrationHub.tsx  Modal.tsx  NodeCard.tsx  StepCard.tsx  TemplateMarketplace.tsx
services/: agentHealthService.ts  agentQueueService.ts  apiConnectorService.ts  apiIntegrations.ts  automationIdeasService.ts  automationRunnerService.ts  (+21 more)
(+26 files in other folders)
